soumyajit pal all projects/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;G:\soumyajit pal all projects
-d
G:\soumyajit pal all projects\doc
-encoding
windows-1252
-charset
windows-1252
G:\soumyajit pal all projects\lastbluej\palindrome.java
<---- end of javadoc command ---->
Loading source file G:\soumyajit pal all projects\lastbluej\palindrome.java...
G:\soumyajit pal all projects\lastbluej\palindrome.java:41: error: reached end of file while parsing
    }
     ^
1 error
